--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@tailwindcss/forms": "^0.5.7",
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
